--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Excursion</title>
   </head>
   <body>
-<h1>Excursion</h1>
+<h1>Discover hidden places in the world around you.</h1>
   </body>
 </html>
