--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
   <body>
 <h1>Discover hidden places in the world around you.</h1>
 <p>Download Excursion. (Coming soon!)</p>
-<video src="videofile.ogg" autoplay poster="posterimage.jpg">
+<video src=".resources/video/excursion.mp4" autoplay poster="posterimage.jpg">
 
 </video>
-
+<h1>Your Personal travel guide</h1>
+<p>Excursion remembers places you like, and recommends new points of interest
+  around you.</p>
+  <img src=".resources/images/camp.jpg">
+  <img src=".resources/images/phone.png">
+  <h1>Coming Soon for iPhone and Android</h1>
+  <p>Download Excursion (Coming soon!)</p>
+  <p>© Excursion</p>
   </body>
 </html>
