--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
   </head>
   <body>
 <h1>Discover hidden places in the world around you.</h1>
 <p>Download Excursion. (Coming soon!)</p>
-<video src=".resources/video/excursion.mp4" autoplay poster="posterimage.jpg">
+<video src="resources/video/excursion.mp4" autoplay poster="posterimage.jpg">
 
 </video>
 <h1>Your Personal travel guide</h1>
 <p>Excursion remembers places you like, and recommends new points of interest
   around you.</p>
-  <img src=".resources/images/camp.jpg">
-  <img src=".resources/images/phone.png">
+  <img src="resources/images/camp.jpg">
+  <img src="resources/images/phone.png">
   <h1>Coming Soon for iPhone and Android</h1>
   <p>Download Excursion (Coming soon!)</p>
   <p>© Excursion</p>
