added body class to html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
   </head>
-  <body>
+  <body class="body">
 <h1>Discover hidden places in the world around you.</h1>
 <p>Download Excursion. (Coming soon!)</p>
 <video src="resources/video/excursion.mp4" autoplay poster="posterimage.jpg">
