--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
 <h1>Discover hidden places in the world around you.</h1>
-<p>Download Excursion. (Coming soon!)</p>
+<p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
 
 <video src="Resources/video/excursion.mp4" autoplay poster="posterimage.jpg">
 </video>
