--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="Resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
   </head>
   <body class="body">
 <h1>Discover hidden places in the world around you.</h1>
 <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
 
-<video src="Resources/video/excursion.mp4" autoplay poster="posterimage.jpg">
+<video src="resources/video/excursion.mp4" autoplay poster="posterimage.jpg">
 </video>
 
 <h1>Your Personal travel guide</h1>
 <p>Excursion remembers places you like, and recommends new points of interest
   around you.</p>
-  <img src="Resources/images/camp.jpg">
-  <img src="Resources/images/phone.png">
+  <img src="resources/images/camp.jpg">
+  <img src="resources/images/phone.png">
   <h1>Coming Soon for iPhone and Android</h1>
   <p>Download Excursion (Coming soon!)</p>
   <p>© Excursion</p>
