changed copy color and video link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </video>
 
 <h1>Your Personal travel guide</h1>
-<p>Excursion remembers places you like, and recommends new points of interest
+<p id="copy">Excursion remembers places you like, and recommends new points of interest
   around you.</p>
   <img src="resources/images/camp.jpg">
   <img src="resources/images/phone.png">
