--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 <h1>Your Personal travel guide</h1>
 <p id="copy">Excursion remembers places you like, and recommends new points of interest
   around you.</p>
-  <img src="resources/images/camp.jpg">
-  <img src="resources/images/phone.png">
+<p>  <img src="resources/images/camp.jpg"> </p>
+<p>  <img src="resources/images/phone.png"> </p>
   <h1>Coming Soon for iPhone and Android</h1>
-  <p>Download Excursion (Coming soon!)</p>
+  <p>  <a class="cta" href="#">Download Excursion (Coming soon!)</a>
+</p>
   <p>© Excursion</p>
   </body>
 </html>
