--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
 
-<h1>Your Personal travel guide</h1>
+<h1>Your personal travel guide</h1>
 <p id="copy">Excursion remembers places you like, and recommends new points of interest
   around you.</p>
 <p>  <img src="resources/images/camp.jpg"> </p>
