--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="/resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/index.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
   </head>
   <body class="body">
@@ -12,14 +12,14 @@
 </p>
 
 <video autoplay="" muted="" loop="">
-      <source src="/resources/videos/excursion.mp4" type="video/mp4">
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
 
 <h2>Your personal travel guide</h2>
 <p id="copy">Excursion remembers places you like, and recommends new points of interest
   around you.</p>
-<p>  <img src="/resources/images/camp.jpg"> </p>
-<p>  <img src="/resources/images/phone.png"> </p>
+<p>  <img src="resources/images/camp.jpg"> </p>
+<p>  <img src="resources/images/phone.png"> </p>
   <h1>Coming Soon for iPhone and Android</h1>
   <p>  <a class="cta" href="#">Download Excursion (Coming soon!)</a>
 </p>
