--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 <h2>Your personal travel guide</h2>
 <p id="copy">Excursion remembers places you like, and recommends new points of interest
   around you.</p>
-<p>  <img src="resources/images/camp.jpg"> </p>
-<p>  <img src="resources/images/phone.png"> </p>
+<p>
+  <img src="resources/images/camp.jpg">
+</p>
+<p>
+  <img src="resources/images/phone.png">
+</p>
   <h1>Coming Soon for iPhone and Android</h1>
   <p>  <a class="cta" href="#">Download Excursion (Coming soon!)</a>
 </p>
