--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
   <h2>Coming Soon for iPhone and Android</h2>
   <p>  <a class="cta" href="#">Download Excursion (Coming soon!)</a>
 </p>
-  <p>© Excursion</p>
+  <p class="footer">© Excursion</p>
   </body>
 </html>
