--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <img src="resources/images/camp.jpg">
 </p>
 <p>
-  <img src="resources/images/phone.png">
+  <img class="app" src="resources/images/phone.png">
 </p>
   <h2>Coming Soon for iPhone and Android</h2>
   <p>  <a class="cta" href="#">Download Excursion (Coming soon!)</a>
