changed cta to id

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="body">
 <h1>Discover hidden places in the world around you.</h1>
 <p>
-  <a class="cta" href="#">Download Excursion (Coming soon!)</a>
+  <a id="cta" href="#">Download Excursion (Coming soon!)</a>
 </p>
 
 <video autoplay="" muted="" loop="">
@@ -25,7 +25,7 @@
   <img class="app" src="resources/images/phone.png">
 </p>
   <h2>Coming Soon for iPhone and Android</h2>
-  <p>  <a class="cta" href="#">Download Excursion (Coming soon!)</a>
+  <p>  <a id="cta" href="#">Download Excursion (Coming soon!)</a>
 </p>
   <p class="footer">© Excursion</p>
   </body>
