added excursions to path on camp image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p id="copy">Excursion remembers places you like, and recommends new points of interest
   around you.</p>
 <p>
-  <img src="resources/images/camp.jpg">
+  <img src="excursion/resources/images/camp.jpg">
 </p>
 <p>
   <img class="app" src="resources/images/phone.png">
