--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 </p>
 
 <video autoplay="" muted="" loop="">
-      <source src="excursion/resources/videos/excursion.mp4" type="video/mp4">
+      <source src="Resources/videos/excursion.mp4" type="video/mp4">
     </video>
 
 <h2>Your personal travel guide</h2>
 <p id="copy">Excursion remembers places you like, and recommends new points of interest
   around you.</p>
 <p>
-  <img src="excursion/resources/images/camp.jpg">
+  <img src="Resources/images/camp.jpg">
 </p>
 <p>
-  <img class="app" src="resources/images/phone.png">
+  <img class="app" src="Resources/images/phone.png">
 </p>
   <h2>Coming Soon for iPhone and Android</h2>
   <p>  <a id="cta" href="#">Download Excursion (Coming soon!)</a>
