removed s from excursions in footer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
   <h2>Coming Soon for iPhone and Android</h2>
   <p>  <a id="cta" href="#">Download Excursion (Coming soon!)</a>
 </p>
-  <p class="footer">© Excursions</p>
+  <p class="footer">© Excursion</p>
   </body>
 </html>
